--- a/pGroupeAB02/src/assets/style.css
+++ b/pGroupeAB02/src/assets/style.css
@@ -102,3 +102,18 @@
     -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, #0149AF,  #64A4FF);
     -fx-effect: none;
 }
+
+.textfield{
+    -fx-text-fill: black;
+    -fx-font-family: 'roboto';
+    -fx-font-size: 24;
+
+    -fx-background-radius: 32;
+    -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, #C6C6C6, #FFFFFF);
+
+    -fx-border-color: linear-gradient(from 50% 0% to 50% 100%, #FFFFFF, #C6C6C6);
+    -fx-border-radius: 32;
+    -fx-border-width: 4;
+
+    -fx-pref-height: 64;
+}
