--- a/pGroupeAB02/src/assets/style.css
+++ b/pGroupeAB02/src/assets/style.css
@@ -152,5 +152,6 @@
 .FIR_title{
     -fx-text-fill: white;
     -fx-font-family: 'candice';
-    -fx-font-size: 24pt;
+    -fx-font-size: 32pt;
+    -fx-effect: dropshadow(gaussian, rgba(128, 128, 128, 1), 1, 0, 0.0, 4.0);
 }
