Audio: Added more sound effect and extended the audion controller.

--- a/pGroupeAB02/src/assets/style.css
+++ b/pGroupeAB02/src/assets/style.css
@@ -14,6 +14,11 @@
     -fx-background-size: cover;
 }
 
+#wheel{
+    -fx-background-image: url("wheel.png");
+    -fx-background-size: cover;
+}
+
 #logo {
     -fx-background-image: url("logo.png");
     -fx-background-repeat: no-repeat;
