--- a/pGroupeAB02/src/assets/style.css
+++ b/pGroupeAB02/src/assets/style.css
@@ -184,3 +184,9 @@
     -fx-font-family: 'roboto';
     -fx-font-size: 24;
 }
+
+.dialog{
+    -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, #fff, #999);
+    -fx-background-radius: 16;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 4, 0, 0.0, 4.0);
+}
