--- a/pGroupeAB02/src/assets/style.css
+++ b/pGroupeAB02/src/assets/style.css
@@ -196,8 +196,18 @@
     -fx-font-size: 24;
 }
 
-.dialog{
-    -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, #fff, #999);
+.card {
     -fx-background-radius: 16;
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 4, 0, 0.0, 4.0);
+    -fx-background-color: white;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 16, 0, 0, 4);
+    -fx-min-width: 512;
+    -fx-min-height: 128;
+    -fx-max-width: 512;
+    -fx-max-height: 128;
+    -fx-padding: 16;
+}
+
+.card-body{
+    -fx-text-fill: black;
+    -fx-font-size: 20;
 }
