--- a/pGroupeAB02/src/assets/style.css
+++ b/pGroupeAB02/src/assets/style.css
@@ -10,6 +10,10 @@
     src: url('candice.ttf');
 }
 
+.root {
+    -fx-font-family: 'roboto';
+}
+
 #background {
     -fx-background-image: url("background.png");
     -fx-background-repeat: no-repeat;
@@ -66,7 +70,6 @@
     -fx-padding: 0 16;
 
     -fx-text-fill: white;
-    -fx-font-family: 'roboto';
     -fx-font-size: 14;
 
     -fx-background-radius: 16;
@@ -77,7 +80,6 @@
     -fx-pref-height: 48;
 
     -fx-text-fill: white;
-    -fx-font-family: 'roboto';
     -fx-font-size: 18;
 
     -fx-background-radius: 32;
@@ -111,7 +113,6 @@
 
 .FIR_textfield{
     -fx-text-fill: black;
-    -fx-font-family: 'roboto';
     -fx-font-size: 24;
 
     -fx-background-radius: 32;
@@ -127,7 +128,6 @@
 
 .FIR_label{
     -fx-text-fill: white;
-    -fx-font-family: 'roboto';
     -fx-font-size: 24;
 }
 
@@ -161,7 +161,6 @@
 .FIR_player-state {
     -fx-pref-height: 64;
     -fx-background-radius: 32;
-    -fx-font-family: 'roboto';
     -fx-font-size: 24;
     -fx-border-radius: 32;
     -fx-border-width: 2;
@@ -212,4 +211,9 @@
 .card-body{
     -fx-text-fill: black;
     -fx-font-size: 20;
+}
+
+.countdown{
+    -fx-text-fill: linear-gradient(from 50% 0% to 50% 100%, #fff, #999);
+    -fx-font-size: 64;
 }
