--- a/pGroupeAB02/src/assets/table-view.css
+++ b/pGroupeAB02/src/assets/table-view.css
@@ -12,6 +12,11 @@
     -fx-font-weight: bold;
 }
 
+.table-row-cell:selected {
+    -fx-background-color: rgb(51, 153, 255);
+
+}
+
 .table-view .nested-column-header
 {
     -fx-padding: 8;
