--- a/pGroupeAB02/src/assets/panel.css
+++ b/pGroupeAB02/src/assets/panel.css
@@ -1,5 +1,5 @@
 .panel{
-    -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, #fff, #999);
+    -fx-background-color: #000a;
     -fx-background-radius: 16;
     -fx-padding: 16;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 16, 0, 0.0, 4.0);
