--- a/pGroupeAB02/src/assets/table-view.css
+++ b/pGroupeAB02/src/assets/table-view.css
@@ -1,12 +1,12 @@
 
-.table-view{
+.table-view {
     -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, #fff, #999);
     -fx-background-radius: 16;
     -fx-padding: 16;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 16, 0, 0.0, 4.0);
 }
 
-.table-view .column-header-background{
+.table-view .column-header-background {
     -fx-text-fill: black;
     -fx-font-size: 16;
     -fx-font-weight: bold;
@@ -16,7 +16,6 @@
     -fx-background-color: rgb(51, 153, 255);
 }
 
-.table-view .nested-column-header
-{
+.table-view .nested-column-header {
     -fx-padding: 8;
 }
